--- a/Kotlin/app/src/main/res/values/strings.xml
+++ b/Kotlin/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="male">Hombre</string>
     <string name="female">Mujer</string>
     <string name="height">Altura</string>
+    <string name="weight">Peso</string>
+    <string name="age">Edad</string>
+    <string name="calculate">Calcular</string>
+    <string name="subtract">-</string>
+    <string name="plus">+</string>
 </resources>
